--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="row">
       <div class="card">
           <div class="image">
-              <img src="https://github.com/SyamSundarKV/ssr-it-services/blob/main/portfolio%20profile.jpg" alt="Team member 1">
+              <img src="https://raw.githubusercontent.com/SyamSundarKV/ssr-it-services/refs/heads/main/portfolio%20profile.jpg" alt="Team member 1">
           </div>
           <div class="info">
               <h3>Syam Sundar KV</h3>
