--- a/index.html
+++ b/index.html
@@ -258,8 +258,7 @@
       <div class="container">
           <div class="row align-items-center">
               <div class="col-md-6 copyright" style="color: #fff; font-size: 1.3rem;">
-                  Copyright &copy; 2024 SSR IT Services. All Rights Reserved.
-              </div>
+                 <!-- Copyright &copy; 2024 SSR IT Services. All Rights Reserved.-->
           </div>
       </div>
   </div>
